--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,17 @@
     "tests"
   ],
   "dependencies": {
-    "requirejs": "2.1.20"
+    "bootstrap": "3.3.5",
+    "jquery": "2.1.4",
+    "js-cookie": "2.0.3",
+    "knockout": "3.3.0",
+    "knockout-postbox": "0.5.2",
+    "lodash": "3.10.1",
+    "moment": "2.10.6",
+    "q": "2.0.2",
+    "requirejs": "2.1.20",
+    "requirejs-glob": "0.1.2",
+    "requirejs-plugins": "1.0.3",
+    "sammy": "0.7.6",
   }
 }
