--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "url": "https://github.com/hhuynhlam/Ulysses/issues"
   },
   "homepage": "https://github.com/hhuynhlam/Ulysses",
-  
   "dependencies": {
     "body-parser": "1.13.2",
     "cookie-parser": "1.3.5",
@@ -25,6 +24,7 @@
     "express": "4.13.1",
     "jade": "1.11.0",
     "morgan": "1.6.1",
+    "requirejs-glob": "0.1.2",
     "serve-favicon": "2.3.0"
   }
 }
