--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "morgan": "1.6.1",
     "requirejs-glob": "0.1.2",
     "serve-favicon": "2.3.0"
+  },
+  "devDependencies": {
+    "grunt": "0.4.5",
+    "grunt-contrib-jasmine": "0.9.1",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-template-jasmine-requirejs": "0.2.3",
+    "lodash": "3.10.1"
   }
 }
