--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node ./src/server/bin/www",
-    "test": ""
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
