--- a/package.json
+++ b/package.json
@@ -32,6 +32,14 @@
     "grunt-contrib-jasmine": "0.9.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-template-jasmine-requirejs": "0.2.3",
+    "gulp": "3.9.0",
+    "gulp-jade": "1.0.1",
+    "gulp-jshint": "1.11.0",
+    "gulp-less": "3.0.3",
+    "gulp-plumber": "1.0.1",
+    "gulp-requirejs": "0.1.3",
+    "gulp-shell": "0.4.2",
+    "jshint-stylish": "2.0.0",
     "lodash": "3.10.1"
   }
 }
