--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "express": "4.13.1",
     "jade": "1.11.0",
     "morgan": "1.6.1",
-    "requirejs-glob": "0.1.2",
     "serve-favicon": "2.3.0"
   },
   "devDependencies": {
@@ -39,6 +38,7 @@
     "gulp-plumber": "1.0.1",
     "gulp-requirejs": "0.1.3",
     "gulp-shell": "0.4.2",
+    "gulp-sourcemaps": "1.5.2",
     "jshint-stylish": "2.0.0",
     "lodash": "3.10.1"
   }
