--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
     "gulp-requirejs": "0.1.3",
     "gulp-shell": "0.4.2",
     "gulp-sourcemaps": "1.5.2",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "2.0.0",
-    "lodash": "3.10.1"
+    "karma": "0.13.10",
+    "karma-chrome-launcher": "0.2.0",
+    "karma-jasmine": "0.3.6",
+    "karma-phantomjs2-launcher": "0.3.2",
+    "karma-requirejs": "0.2.2",
+    "lodash": "3.10.1",
+    "requirejs": "^2.1.20"
   }
 }
