--- a/.jshintrc
+++ b/.jshintrc
@@ -24,10 +24,11 @@
     "node"          : true,    // Enable globals available when code is running inside of the NodeJS runtime environment.
 
     "globals"       : {       // Extra globals.
-        "define"  : true,
-        "document" :true,
-        "require"  : true,
-        "window"  : true
+        "define"    : true,
+        "document"  :true,
+        "require"   : true,
+        "window"    : true,
+        "System"    : true
     },        
     "indent"        : 4         // Specify indentation spacing
 }
