--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.91",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.91"
+    },
+    "shim": {
+      "jquery": { "exports": "jQuery" },
+      "bootstrap": { "deps": ["jquery"] },
+      "sammy": { "deps": ["jquery"] }
     }
   }
 }
