--- a/package.json
+++ b/package.json
@@ -50,21 +50,19 @@
     "configFile": "src/client/core/jspm_config.js",
     "dependencies": {
       "bootstrap": "github:twbs/bootstrap@3.3.5",
+      "css": "github:systemjs/plugin-css@0.1.18",
       "jquery": "github:components/jquery@2.1.4",
+      "json": "github:systemjs/plugin-json@0.1.0",
       "knockout": "github:knockout/knockout@3.3.0",
       "knockout-postbox": "github:rniemeyer/knockout-postbox@0.5.2",
       "lodash": "npm:lodash@3.10.1",
       "moment": "github:moment/moment@2.10.6",
-      "sammy": "github:quirkey/sammy@0.7.6"
+      "sammy": "github:quirkey/sammy@0.7.6",
+      "text": "github:systemjs/plugin-text@0.0.2"
     },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.91",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.91"
-    },
-    "shim": {
-      "jquery": { "exports": "jQuery" },
-      "bootstrap": { "deps": ["jquery"] },
-      "sammy": { "deps": ["jquery"] }
     }
   }
 }
