--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node ./src/server/bin/www",
-    "test": ""
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "serve-favicon": "2.3.0"
   },
   "devDependencies": {
+    "es6-module-loader": "0.17.8",
     "grunt": "0.4.5",
     "grunt-contrib-jasmine": "0.9.1",
     "grunt-contrib-watch": "0.6.1",
@@ -39,15 +40,18 @@
     "gulp-requirejs": "0.1.3",
     "gulp-shell": "0.4.2",
     "gulp-sourcemaps": "1.5.2",
-    "jasmine-core": "^2.3.4",
+    "jasmine-core": "2.3.4",
     "jshint-stylish": "2.0.0",
     "jspm": "0.16.11",
     "karma": "0.13.10",
     "karma-chrome-launcher": "0.2.0",
     "karma-jasmine": "0.3.6",
     "karma-phantomjs2-launcher": "0.3.2",
-    "karma-requirejs": "0.2.2",
-    "lodash": "3.10.1"
+    "karma-spec-reporter": "0.0.20",
+    "karma-systemjs": "0.8.0",
+    "lodash": "3.10.1",
+    "systemjs": "0.19.3",
+    "traceur": "0.0.91"
   },
   "jspm": {
     "directories": {
