--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "3.3.5",
     "jquery": "2.1.4",
     "knockout": "3.3.0",
+    "components-font-awesome": "4.4.0",
     "knockout-postbox": "0.5.2",
     "lodash": "3.10.1",
     "moment": "2.10.6",
